best-practices/require_drop_cap_net_raw/e2e/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../require_drop_cap_net_raw.yaml
assert:
- policy-assert.yaml
