best-practices/require_drop_cap_net_raw/e2e/bad-pod-corner.yaml
apiVersion: v1
kind: Pod
metadata:
  name: add-capabilities-bad
spec:
  containers:
  - name: add-capabilities
    image: busybox:1.35
    securityContext:
      capabilities:
        drop:
          - CAP_NET_RAW
  - name: add-capabilities
    image: busybox:1.35
    securityContext:
      capabilities:
        drop:
          - CAP_NET_RAW
---
apiVersion: v1
kind: Pod
metadata:
  name: add-capabilities-bad
spec:
  containers:
  - name: add-capabilities
    image: busybox:1.35
    securityContext:
      capabilities:
        add: ["SYS_TIME"]
  - name: add-capabilities
    image: busybox:1.35
    securityContext:
      capabilities:
        drop:
          - CAP_NET_RAW
---
apiVersion: v1
kind: Pod
metadata:
  name: add-capabilities-good
spec:
  containers:
  - name: init
    image: busybox:1.35
    securityContext:
      capabilities:
        drop:
          - CAP_NET_RAW
  - name: init-again
    image: busybox:1.35
